source/elasticlog/templates/kibana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-dp
  labels:
    component: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kibana
  template:
    metadata:
      labels:
        component: kibana
    spec:
      volumes:
        - name: kibana-cert
          secret:
            secretName: kibana-cert
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.5.3-amd64
          volumeMounts:
            - name: kibana-cert
              mountPath: /usr/share/kibana/config/certs
              readOnly: true
          ports:
            - containerPort: 5601
